# sql2cypher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-test.yml
doc/: doxygen-config.dox
documentation/: doxygen-config.dox
include/SCC/: ast.h  conf.h  config.h  lexical_analyzer.h  log.h  main.h  query_assembler.h  syntax_analyzer.h  tree_dump.h
include/SCC/ast/: ast.h  data_types.h  statement_types.h  stmt_types.h
include/SCC/ast/nodes/: char_node.h  float_node.h  inode.h  int_node.h  root_node.h  service_node.h  string_node.h
include/SCC/common/: file_utils.h  singleton.h  string_utils.h
include/SCC/config/: args.h  config.h  scc_args.h  scc_config.h  scc_mode.h
include/SCC/lexer/: lexer.h  lexical_analyzer.h  symbol_classifier.h  symbol_types.h  token_classifier.h
resources/: sql_queries.sql
resources/SQL_AST_test/positive_tests/: alter_table_add_column_and_constraint_test.sql  alter_table_add_column_test.sql  alter_table_add_constraint_test.sql  alter_table_drop_more_than_one_column_test.sql  alter_table_drop_one_column_test.sql  create_db_test.sql  create_table_with_columns_of_all_types_test.sql  create_table_with_different_constraints_test.sql  create_table_with_fk_which_refs_on_col_test.sql  create_table_with_fk_which_refs_on_table_test.sql  create_table_with_more_than_one_pk_test.sql  create_table_with_named_fk_test.sql  create_table_with_named_pk_test.sql  create_table_with_one_column_test.sql  create_table_with_pk_test.sql  create_table_with_same_column_types_test.sql  drop_database_more_than_one_test.sql  drop_database_one_test.sql  drop_table_more_than_one_test.sql  drop_table_one_test.sql
resources/lexical_analyzer_test/: char_test.sql  float_num_test.sql  int_num_test.sql  line_test.sql  string_test.sql
resources/lexical_analyzer_test_resources/: lexical_analyzer_test.sql
resources/tree_dump/: tree_dump.txt
src/: ast.cpp  ast_handler.cpp  conf.cpp  config.cpp  lexical_analyzer.cpp  log.cpp  main.cpp  query_assembler.cpp  query_assembler_ddl.cpp  query_assembler_dml.cpp  query_assembler_general.cpp  query_assembler_other.cpp  syntax_analyzer.cpp  syntax_analyzer_ddl.cpp  syntax_analyzer_dml.cpp  syntax_analyzer_general.cpp  syntax_analyzer_other.cpp  tree_dump.cpp
src/ast/: data_types.cpp  stmt_types.cpp
src/ast/nodes/: char_node.cpp  float_node.cpp  inode.cpp  int_node.cpp  root_node.cpp  service_node.cpp  string_node.cpp
src/common/: file_utils.cpp  singleton.cpp  string_utils.cpp
src/config/: args.cpp  config.cpp  scc_args.cpp  scc_config.cpp  scc_mode.cpp
src/lexer/: lexer.cpp  lexical_analyzer.cpp  symbol_classifier.cpp  symbol_types.cpp  token_classifier.cpp
test/SQL_AST_test/: SQL_AST_test.cpp
test/ast/: data_types_test.cpp  stmt_types_test.cpp
test/ast_test/: ast_test.cpp
test/common/: file_utils_test.cpp  string_utils_test.cpp
test/config/: scc_args_test.cpp  scc_config_test.cpp  scc_mode_test.cpp
test/config_test/: config_test.cpp
test/fixtures/include/SCC/fixtures/: scc_args_fixtures.h  scc_config_fixtures.h
test/fixtures/src/: scc_args_fixtures.cpp  scc_config_fixtures.cpp
test/lexer/: symbol_classifier_test.cpp  symbol_types_test.cpp
test/lexical_analyzer_test/: lexical_analyzer_test.cpp
test/log_test/: log_test.cpp
